# MindustryLogicScript

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_EN.md  compile_commands.json
.github/workflows/: jekyll-gh-pages.yml  release.yml
docs/: _config.yml  index.html  index.md
docs/_layouts/: default.html
docs/assets/css/: note.css  style.css
docs/styles/: background.css
include/backend/codegen/: CodeGenerator.hpp
include/backend/logger/: Logger.hpp
include/backend/writer/: Writer.hpp
include/common/: LineCounter.hpp
include/frontend/ast/: Ast.hpp
include/frontend/lexer/: Token.hpp  Tokenizer.hpp
include/frontend/parser/: Parser.hpp
src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
src/backend/codegen/: CodeGenerator.cpp
src/backend/logger/: Logger.cpp
src/backend/writer/: Writer.cpp
src/common/: LineCounter.cpp
src/core/: App.cpp  App.hpp  CMakeLists.txt  Tokenizer.cpp  Tokenizer.hpp
src/core/AST/: Ast.cpp  Ast.hpp  Ast_node.cpp  Ast_node.hpp  CMakeLists.txt
src/core/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/core/Statement/: Assignment_statement.cpp  Assignment_statement.hpp  CMakeLists.txt  If_statement.hpp  Operation_statement.cpp  (+3 more)
test/: Assignment Statement.mls  Assignment_Statement.mls  Operation.mls  chained_ops.mls  comment_test.mls  if_test.mls  ml_test.mls  while_test.mls
wiki/: generate-manifest.js  index.html  manifest.json
wiki/css/: base.css  layout.css  markdown.css  sidebar.css
wiki/docs/: README.md  welcome.md
wiki/js/: app.js  config.js  markdown.js  search.js
(+58 files in other folders)
